// Wiregost - Golang Exploitation Framework
// Copyright Â© 2020 Para
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package db;

option go_package = "dbpb";

import "google/protobuf/timestamp.proto";

// Service - A service running behind a port
message Service {
        // General
        uint32 ID = 1;
        // @inject_tag: gorm:"not null"
        uint32 PortID = 2;
        // @inject_tag: xml:"proto,attr"
        string Protocol = 3;
        // @inject_tag: xml:"name,attr"
        string Name = 4;
        // @inject_tag: xml:"extrainfo,attr"
        string ExtraInfo = 5;

        // Nmap
        // @inject_tag: xml:"devicetype,attr"
        string DeviceType = 10;
        // @inject_tag: xml:"hostname,attr"
        string Hostname = 12;
        // @inject_tag: xml:"method,attr"
        string Method = 14;
        // @inject_tag: xml:"ostype,attr"
        string OSType = 15;
        // @inject_tag: xml:"product,attr"
        string Product = 16;
        // @inject_tag: xml:"rpcnum,attr"
        string RPCNum = 17;
        // @inject_tag: xml:"servicefp,attr"
        string ServiceFP = 18;
        // @inject_tag: xml:"tunnel,attr"
        string Tunnel = 19;
        // @inject_tag: xml:"lowver,attr"
        string LowVersion = 13;
        // @inject_tag: xml:"highver,attr"
        string HighVersion = 11;
        // @inject_tag: xml:"version,attr"
        string Version = 20;
        // @inject_tag: xml:"conf,attr"
        int32 Configuration = 21;
        // @inject_tag: xml:"cpe"
        repeated string CPEs = 6;        // "Common Platform Enumeration" is standardized way to name software applications, OSs and Hardware platforms
        // Timestamp
        google.protobuf.Timestamp CreatedAt = 38;
        google.protobuf.Timestamp UpdatedAt = 39;
}
